--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "intervention/image": "dev-master",
         "laravel/tinker": "^1.0",
         "yajra/laravel-datatables-html": "3.*",
         "yajra/laravel-datatables-oracle": "8.*"
