--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-dompdf": "^0.8.4",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
         "intervention/image": "dev-master",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "yajra/laravel-datatables-html": "3.*",
         "yajra/laravel-datatables-oracle": "8.*"
